--- a/source/stylesheets/small/_flamingo.sass
+++ b/source/stylesheets/small/_flamingo.sass
@@ -24,7 +24,7 @@
       .st8
         fill: #{$value}
 
-@each $key, $value in $leggs-colors
+@each $key, $value in $legs-colors
   ##{$key}:checked
     ~ #flamingo
       .st0
