--- a/source/stylesheets/small/_flamingo_icon.sass
+++ b/source/stylesheets/small/_flamingo_icon.sass
@@ -37,7 +37,7 @@
   .sti0
     fill-opacity: 0
 
-.flamingo-icon-leggs-color
+.flamingo-icon-legs-color
   .sti0
     fill-opcaity: 0
     fill: $grey-dark
@@ -46,6 +46,6 @@
   .sti2
     fill-opacity: 0
 
-// sti0 = leggs
+// sti0 = legs
 // sti2 = beak
 // sti3 = body
